--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 #container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 #left_table,
@@ -18,9 +19,12 @@ footer {
 }
 h1,
 h2 {
+  font-size: small;
   text-align: center;
 }
 body {
+  /*Wiem że zdjęcie przy oddaleniu strony na max nie pokrywa całości,
+   ale zbliżenie, ktore jest normalnie wyglada całkiem w porzadku */
   background-image: url("images/background_img.jpg");
   background-repeat: no-repeat;
   background-size: auto;
@@ -33,4 +37,15 @@ footer {
   background-color: white;
   position: fixed;
   bottom: 0;
+}
+@media screen and (min-width: 777px) {
+  #container {
+    flex-direction: row;
+  }
+  h1 {
+    font-size: xx-large;
+  }
+  h2 {
+    font-size: large;
+  }
 }
